--- a/apps/message-router-server/project.json
+++ b/apps/message-router-server/project.json
@@ -5,8 +5,10 @@
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "@nrwl/webpack:webpack",
-      "outputs": ["{options.outputPath}"],
+      "executor": "@nx/webpack:webpack",
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
         "target": "node",
@@ -14,7 +16,9 @@
         "outputPath": "dist/apps/message-router-server",
         "main": "apps/message-router-server/src/main.ts",
         "tsConfig": "apps/message-router-server/tsconfig.app.json",
-        "assets": ["apps/message-router-server/src/assets"],
+        "assets": [
+          "apps/message-router-server/src/assets"
+        ],
         "isolatedConfig": true,
         "webpackConfig": "apps/message-router-server/webpack.config.js"
       },
@@ -24,10 +28,11 @@
       }
     },
     "serve": {
-      "executor": "@nrwl/js:node",
+      "executor": "@nx/js:node",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "message-router-server:build"
+        "buildTarget": "message-router-server:build",
+        "inspect": false
       },
       "configurations": {
         "development": {
@@ -39,15 +44,21 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "executor": "@nx/linter:eslint",
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/message-router-server/**/*.ts"]
+        "lintFilePatterns": [
+          "apps/message-router-server/**/*.ts"
+        ]
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "executor": "@nx/jest:jest",
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/message-router-server/jest.config.ts",
         "passWithNoTests": true
