--- a/package.json
+++ b/package.json
@@ -6,15 +6,36 @@
   "private": true,
   "dependencies": {
     "@koishijs/client": "^5.6.2",
+    "@koishijs/plugin-adapter-onebot": "^5.6.7",
+    "@koishijs/plugin-admin": "^1.2.1",
+    "@koishijs/plugin-analytics": "^1.0.3",
+    "@koishijs/plugin-bind": "^1.4.1",
+    "@koishijs/plugin-callme": "^1.3.2",
+    "@koishijs/plugin-commands": "^3.1.3",
     "@koishijs/plugin-console": "^5.6.2",
+    "@koishijs/plugin-database-sqlite": "^3.4.3",
+    "@koishijs/plugin-dataview": "^2.2.6",
     "@koishijs/plugin-echo": "^2.2.3",
+    "@koishijs/plugin-explorer": "^1.2.1",
+    "@koishijs/plugin-help": "^2.2.2",
+    "@koishijs/plugin-insight": "^3.3.3",
+    "@koishijs/plugin-inspect": "^1.1.0",
+    "@koishijs/plugin-logger": "^2.2.3",
+    "@koishijs/plugin-login": "^3.1.0",
+    "@koishijs/plugin-rate-limit": "^1.3.2",
     "@koishijs/plugin-sandbox": "^3.1.2",
+    "@koishijs/plugin-status": "^7.1.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.0",
+    "@nestjs/platform-ws": "^9.4.0",
+    "@nestjs/websockets": "^9.4.0",
     "axios": "^1.0.0",
     "koishi": "^4.12.6",
     "koishi-nestjs": "^6.0.18",
+    "koishi-plugin-gocqhttp": "^3.5.0",
+    "koishi-plugin-schedule": "^4.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
@@ -22,26 +43,26 @@
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/eslint-plugin-nx": "15.9.2",
-    "@nrwl/jest": "15.9.2",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.9.2",
-    "@nrwl/nest": "15.9.2",
-    "@nrwl/node": "15.9.2",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/webpack": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
+    "@nx/eslint-plugin": "16.0.1",
+    "@nx/jest": "16.0.1",
+    "@nx/js": "16.0.1",
+    "@nx/linter": "16.0.1",
+    "@nx/nest": "16.0.1",
+    "@nx/node": "16.0.1",
+    "@nx/webpack": "16.0.1",
+    "@nx/workspace": "16.0.1",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "15.9.2",
+    "nx": "16.0.1",
+    "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5"
   }
