--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@koishijs/client": "^5.6.2",
+    "@koishijs/plugin-adapter-lark": "^2.0.2",
     "@koishijs/plugin-adapter-onebot": "^5.6.7",
     "@koishijs/plugin-adapter-qqguild": "^3.5.1",
     "@koishijs/plugin-admin": "^1.2.1",
@@ -26,9 +27,9 @@
     "@koishijs/plugin-rate-limit": "^1.3.2",
     "@koishijs/plugin-sandbox": "^3.1.2",
     "@koishijs/plugin-status": "^7.1.2",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/common": "9.1.1",
+    "@nestjs/core": "9.1.1",
+    "@nestjs/platform-express": "9.1.1",
     "@nestjs/platform-socket.io": "^9.4.0",
     "@nestjs/platform-ws": "^9.4.0",
     "@nestjs/websockets": "^9.4.0",
@@ -42,16 +43,16 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@nx/eslint-plugin": "16.0.1",
-    "@nx/jest": "16.0.1",
-    "@nx/js": "16.0.1",
-    "@nx/linter": "16.0.1",
-    "@nx/nest": "16.0.1",
-    "@nx/node": "16.0.1",
-    "@nx/webpack": "16.0.1",
-    "@nx/workspace": "16.0.1",
+    "@nestjs/schematics": "9.1.0",
+    "@nestjs/testing": "9.1.1",
+    "@nx/eslint-plugin": "16.1.4",
+    "@nx/jest": "16.1.4",
+    "@nx/js": "16.1.4",
+    "@nx/linter": "16.1.4",
+    "@nx/nest": "16.1.4",
+    "@nx/node": "16.1.4",
+    "@nx/webpack": "16.1.4",
+    "@nx/workspace": "16.1.4",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "5.58.0",
@@ -60,11 +61,12 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "16.0.1",
+    "nx": "16.1.4",
     "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "5.0.4"
   }
 }
+
