--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@koishijs/plugin-rate-limit": "^1.3.2",
     "@koishijs/plugin-sandbox": "^3.1.2",
     "@koishijs/plugin-status": "^7.1.2",
-    "@nestjs/common": "9.1.1",
-    "@nestjs/core": "9.1.1",
-    "@nestjs/platform-express": "9.1.1",
+    "@nestjs/common": "^9.4.0",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/platform-express": "^9.4.0",
     "@nestjs/platform-socket.io": "^9.4.0",
     "@nestjs/platform-ws": "^9.4.0",
     "@nestjs/websockets": "^9.4.0",
@@ -45,14 +45,14 @@
   "devDependencies": {
     "@nestjs/schematics": "9.1.0",
     "@nestjs/testing": "9.1.1",
-    "@nx/eslint-plugin": "16.1.4",
-    "@nx/jest": "16.1.4",
-    "@nx/js": "16.1.4",
-    "@nx/linter": "16.1.4",
-    "@nx/nest": "16.1.4",
-    "@nx/node": "16.1.4",
-    "@nx/webpack": "16.1.4",
-    "@nx/workspace": "16.1.4",
+    "@nx/eslint-plugin": "16.1.0",
+    "@nx/jest": "16.1.0",
+    "@nx/js": "16.1.0",
+    "@nx/linter": "16.1.0",
+    "@nx/nest": "16.1.0",
+    "@nx/node": "16.1.0",
+    "@nx/webpack": "16.1.0",
+    "@nx/workspace": "16.1.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "5.58.0",
@@ -61,7 +61,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "16.1.4",
+    "nx": "16.1.0",
     "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
     "ts-jest": "29.1.0",
